# rustscript

./: .gitignore  CLAUDE.md  CONVENTIONS.md  Cargo.toml  LICENSE  README.md  justfile  llms.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/rsc-cli/: Cargo.toml
crates/rsc-cli/src/: main.rs  repl.rs
crates/rsc-cli/tests/: cli.rs
crates/rsc-driver/: Cargo.toml
crates/rsc-driver/src/: deps.rs  error.rs  error_translation.rs  lib.rs  manifest.rs  pipeline.rs  project.rs  rustdoc_cache.rs  rustdoc_convert.rs  rustdoc_parser.rs  templates.rs  typegen.rs
crates/rsc-driver/tests/: conformance.rs  conformance_e2e.rs  decorators.rs  diagnostic_quality.rs  diagnostics.rs  e2e.rs  error_messages.rs  generators.rs  phase2_composition.rs  phase2_diagnostics.rs  phase2_e2e.rs  phase2_snapshots.rs  phase3_e2e.rs  phase4_diagnostics.rs  phase4_e2e.rs  phase4_snapshots.rs  phase5_integration.rs  phase6_integration.rs  shared_e2e.rs  shared_type.rs  showcase.rs  showcase_e2e.rs  showcase_ecosystem.rs  snapshots.rs  stress_tests.rs  template_compile.rs  tuple_types.rs  utility_types.rs  variadic_tuples.rs
crates/rsc-driver/tests/test_utils/: mod.rs
crates/rsc-emit/: Cargo.toml
crates/rsc-emit/src/: emitter.rs  lib.rs
crates/rsc-fmt/: Cargo.toml
crates/rsc-fmt/src/: error.rs  lib.rs  printer.rs
crates/rsc-fmt/tests/: phase5_formatting.rs  roundtrip.rs
crates/rsc-hover/: Cargo.toml
crates/rsc-hover/src/: lib.rs
crates/rsc-lower/: Cargo.toml
crates/rsc-lower/src/: builtins.rs  context.rs  derive_inference.rs  error.rs  lib.rs  ownership.rs  transform.rs  types.rs
crates/rsc-lower/src/transform/: async_lower.rs  class_lower.rs  expr_lower.rs  fn_lower.rs  import_lower.rs  match_lower.rs  mod.rs  stdlib_deps.rs  stmt_lower.rs  test_lower.rs  type_lower.rs  union_lower.rs  use_collector.rs
crates/rsc-lsp/: Cargo.toml
crates/rsc-lsp/src/: builtin_hover.rs  completions.rs  diagnostics.rs  error.rs  lib.rs  name_map.rs  position_map.rs  ra_proxy.rs  rustdoc_cache.rs  rustdoc_translator.rs  server.rs
crates/rsc-lsp/tests/: lsp_integration.rs
crates/rsc-parser/: Cargo.toml
crates/rsc-parser/src/: error.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/rsc-parser/tests/: robustness.rs
crates/rsc-syntax/: Cargo.toml
crates/rsc-syntax/src/: ast.rs  diagnostic.rs  (+5 more)
crates/rsc-typeck/: Cargo.toml
crates/rsc-web/: Cargo.toml
crates/rsc-web/src/: lib.rs  translator.rs
crates/rustscript-cli/: Cargo.toml  README.md
crates/rustscript-cli/src/: main.rs  repl.rs
crates/rustscript-cli/tests/: cli.rs
crates/rustscript-driver/: Cargo.toml  README.md
crates/rustscript-driver/src/: deps.rs  error_translation.rs  lib.rs  manifest.rs  pipeline.rs  project.rs  rustdoc_convert.rs  rustdoc_parser.rs  typegen.rs
crates/rustscript-driver/tests/: conditional_types.rs  conformance.rs  diagnostic_quality.rs  diagnostics.rs  e2e.rs  error_messages.rs  inline_rust.rs  phase2_diagnostics.rs  phase2_e2e.rs  phase2_snapshots.rs  phase3_e2e.rs  phase4_diagnostics.rs  phase4_e2e.rs  phase4_snapshots.rs  phase5_integration.rs  phase6_integration.rs  showcase.rs  showcase_ecosystem.rs  showcase_ecosystem_e2e.rs  snapshots.rs  stress_tests.rs  template_compile.rs  tuple_e2e.rs  union_types.rs  utility_types.rs
crates/rustscript-driver/tests/test_utils/: mod.rs
crates/rustscript-emit/: Cargo.toml  README.md
crates/rustscript-emit/src/: emitter.rs  lib.rs
crates/rustscript-fmt/: Cargo.toml  README.md
crates/rustscript-fmt/src/: lib.rs  printer.rs
crates/rustscript-fmt/tests/: phase5_formatting.rs  roundtrip.rs
crates/rustscript-hover/: Cargo.toml  README.md
crates/rustscript-hover/src/: lib.rs
crates/rustscript-lower/: Cargo.toml  README.md
crates/rustscript-lower/src/: builtins.rs  context.rs  derive_inference.rs  error.rs  lib.rs  ownership.rs
crates/rustscript-lower/src/transform/: async_lower.rs  class_lower.rs  expr_lower.rs  fn_lower.rs  import_lower.rs  match_lower.rs  mod.rs  stdlib_deps.rs  stmt_lower.rs  test_lower.rs  type_lower.rs  union_lower.rs  use_collector.rs
crates/rustscript-lsp/: Cargo.toml  README.md
crates/rustscript-lsp/src/: builtin_hover.rs  completions.rs  diagnostics.rs  error.rs  lib.rs  name_map.rs  position_map.rs  ra_proxy.rs  rustdoc_parser.rs  rustdoc_translator.rs  server.rs
crates/rustscript-lsp/tests/: lsp_integration.rs
crates/rustscript-parser/: Cargo.toml  README.md
crates/rustscript-parser/src/: error.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/rustscript-parser/tests/: robustness.rs
crates/rustscript-syntax/: Cargo.toml  README.md
crates/rustscript-syntax/src/: ast.rs  diagnostic.rs  external_fn.rs  rust_ir.rs  source.rs  span.rs
crates/rustscript-typeck/: Cargo.toml  README.md
crates/rustscript-typeck/src/: bridge.rs  resolve.rs  types.rs
crates/rustscript-web/: Cargo.toml  README.md
crates/rustscript-web/src/: lib.rs  translator.rs
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json  rustscript-0.1.0.vsix  tsconfig.json
examples/: .gitignore  async_api.rts  axum_server.rts  cli_tool.rts  data_pipeline.rts  rest_api.rts  showcase.rts
examples/async_api/: cargo.toml  rustscript.json
examples/axum_server/: cargo.toml  rustscript.json
examples/background_worker/: cargo.toml  rustscript.json
examples/cli_tool/: README.md  cargo.toml  rustscript.json
examples/data_pipeline/: cargo.toml  rustscript.json
examples/fullstack_api/: README.md  build.sh  cargo.toml  rustscript.json
examples/hello/: rustscript.json
examples/http_client/: README.md  cargo.toml  rustscript.json
examples/json_api/: README.md  cargo.toml  rustscript.json
examples/rest_api/: cargo.toml  rustscript.json
examples/showcase/: cargo.toml  rustscript.json
examples/tauri_notes/: .gitignore  Cargo.toml  README.md  build.sh  cargo.toml  rustscript.json  tauri.conf.json
website/: mdx-components.tsx  next.config.ts  package.json  playwright.config.ts  tsconfig.json
website/e2e/: smoke.spec.ts
website/worker/: rustdoc-proxy.ts  wrangler.toml
(+77 files in other folders)
