[workspace]
members = [
    "crates/rsc-syntax",
    "crates/rsc-parser",
    "crates/rsc-typeck",
    "crates/rsc-lower",
    "crates/rsc-emit",
    "crates/rsc-fmt",
    "crates/rsc-driver",
    "crates/rsc-lsp",
    "crates/rsc-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
codespan-reporting = "0.11"
regex = "1"
toml = "0.8"
