[workspace]
members = [
    "crates/rustscript-syntax",
    "crates/rustscript-parser",
    "crates/rustscript-typeck",
    "crates/rustscript-lower",
    "crates/rustscript-emit",
    "crates/rustscript-fmt",
    "crates/rustscript-driver",
    "crates/rustscript-hover",
    "crates/rustscript-lsp",
    "crates/rustscript-cli",
    "crates/rustscript-web",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/jmfirth/rustscript"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
codespan-reporting = "0.11"
regex = "1"
toml = "0.8"
