[package]
name = "rsc"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rsc"
path = "src/main.rs"

[dependencies]
rsc-driver = { path = "../rsc-driver" }
rsc-syntax = { path = "../rsc-syntax" }
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
