[package]
name = "rsc"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rsc"
path = "src/main.rs"

[dependencies]
rsc-driver = { path = "../rsc-driver" }
rsc-fmt = { path = "../rsc-fmt" }
rsc-lsp = { path = "../rsc-lsp" }
rsc-syntax = { path = "../rsc-syntax" }
clap = { workspace = true }
anyhow = { workspace = true }
notify = "6"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
