[package]
name = "rsc-driver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rsc-syntax = { path = "../rsc-syntax" }
rsc-parser = { path = "../rsc-parser" }
rsc-lower = { path = "../rsc-lower" }
rsc-emit = { path = "../rsc-emit" }
thiserror = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
rsc-fmt = { path = "../rsc-fmt" }
