[package]
name = "rsc-lower"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rsc-syntax = { path = "../rsc-syntax" }
rsc-typeck = { path = "../rsc-typeck" }
thiserror = { workspace = true }

[dev-dependencies]
rsc-parser = { path = "../rsc-parser" }
rsc-emit = { path = "../rsc-emit" }
