[package]
name = "rsc-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rsc-syntax = { path = "../rsc-syntax" }
rsc-parser = { path = "../rsc-parser" }
rsc-driver = { path = "../rsc-driver" }
rsc-fmt = { path = "../rsc-fmt" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
thiserror = { workspace = true }
serde_json = "1"
