[package]
name = "rsc-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for the RustScript compiler"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rsc-syntax = { path = "../rsc-syntax" }
rsc-parser = { path = "../rsc-parser" }
rsc-lower = { path = "../rsc-lower" }
rsc-emit = { path = "../rsc-emit" }
rsc-driver = { path = "../rsc-driver" }
rsc-hover = { path = "../rsc-hover" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
