[package]
name = "rustscript"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/jmfirth/rustscript"
description = "Command-line interface for the RustScript compiler"

[[bin]]
name = "rustscript"
path = "src/main.rs"

[[bin]]
name = "rsc"
path = "src/main.rs"

[dependencies]
rustscript-driver = { path = "../rustscript-driver" }
rustscript-fmt = { path = "../rustscript-fmt" }
rustscript-lsp = { path = "../rustscript-lsp" }
rustscript-syntax = { path = "../rustscript-syntax" }
clap = { workspace = true }
anyhow = { workspace = true }
notify = "6"
ctrlc = "3"
rustyline = "14"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
