[package]
name = "rustscript-driver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustscript-syntax = { path = "../rustscript-syntax" }
rustscript-parser = { path = "../rustscript-parser" }
rustscript-lower = { path = "../rustscript-lower" }
rustscript-emit = { path = "../rustscript-emit" }
thiserror = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
rustscript-fmt = { path = "../rustscript-fmt" }
