[package]
name = "rustscript-lower"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustscript-syntax = { path = "../rustscript-syntax" }
rustscript-typeck = { path = "../rustscript-typeck" }
thiserror = { workspace = true }

[dev-dependencies]
rustscript-parser = { path = "../rustscript-parser" }
rustscript-emit = { path = "../rustscript-emit" }
