[package]
name = "rustscript-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/jmfirth/rustscript"
description = "Lexer and recursive descent parser for RustScript (.rts) source files"

[dependencies]
rustscript-syntax = { path = "../rustscript-syntax" }
thiserror = { workspace = true }
