[package]
name = "rustscript-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for the RustScript compiler"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustscript-syntax = { path = "../rustscript-syntax" }
rustscript-parser = { path = "../rustscript-parser" }
rustscript-lower = { path = "../rustscript-lower" }
rustscript-emit = { path = "../rustscript-emit" }
rustscript-driver = { path = "../rustscript-driver" }
rustscript-hover = { path = "../rustscript-hover" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
